# Hare

./: .gitignore  CMakeLists.txt  COMPILING.md  HISTORY.md  LICENSE  Makefile  Makefile.old  Makefile_Encoders  Makefile_Hare  Makefile_libHare  README.md  build.sh  hare.cmake.diff
src/: CMakeLists.txt  Makefile  Makefile.old
src/AudioInfo/: AudioAttribute.cpp  AudioAttributes.cpp  AudioInfo.cpp  AudioInfo.h  CMakeLists.txt  GenreList.cpp  GenreList.h  ID3Tag.cpp  ID3Tag.h  ID3Tags.cpp  Makefile  Makefile.old
src/FlipSideAE/: Makefile
src/Hare/: AppDefs.h  AppView.cpp  AppView.h  AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  AudioAttribute.cpp  AudioAttributes.h  CMakeLists.txt  CheckMark.cpp  CheckMark.h  CheckMarkData.h  CommandConstants.h  EditorView.cpp  EditorView.h  EncoderListView.cpp  EncoderListView.h  FileNamePatternView.cpp  FileNamePatternView.h  GUIStrings.h  Hare.rdef  ID3Tag.h  ID3Tags.cpp  Makefile  Makefile.old  PrefWindow.cpp  PrefWindow.h  RefRow.cpp  RefRow.h  Settings.cpp  Settings.h  StatusBarFilter.cpp  StatusBarFilter.h  VolumeMenuItem.cpp  VolumeMenuItem.h
src/Hare/Hare/: AppView.cpp  AppView.h  AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  AudioAttribute.cpp  AudioAttribute.h  AudioAttributes.cpp  AudioInfo.cpp  CMakeLists.txt  CheckMark.cpp  CheckMark.h  EditorView.cpp  EditorView.h  EncoderListView.cpp  EncoderListView.h  FileNamePatternView.cpp  FileNamePatternView.h  GenreList.cpp  Hare.rdef  ID3Tag.cpp  ID3Tags.h  Makefile  Makefile.old  Settings.cpp  Settings.h  StatusBarFilter.cpp  StatusBarFilter.h  VolumeMenuItem.cpp  VolumeMenuItem.h
src/Matcher/: CMakeLists.txt  Makefile.old
src/Santa/: CLVColumn.cpp  (+4 more)
(+81 files in other folders)
